add tutorial, edit link, info boxes

--- a/pages/_includes/layouts/base.njk
+++ b/pages/_includes/layouts/base.njk
@@ -36,7 +36,7 @@
 			<div class="title"><span class="icon mistybook"></span> wareware pocket guide</div>
 			<div class="search"></div>
 			<div class="paletteswitch"></div>
-			<div class="editpage"><a href="linkhere"><span class="icon pencil"></span> edit page</a></div>
+			<div class="editpage"><a href="https://github.com/riprip-dev/wareware-pocket-guide/edit/main{{ page.filePathStem }}.md"><span class="icon pencil"></span> edit page</a></div>
 			<div class="close"><a onclick="closeWindow('guide')"><span class="icon delete"></span></a></div>
 		</div>
 		<div class="main">
